app/assets/stylesheets/instances/_sandbox_new.scss
.dialog.sandbox_new {
    $dialog-width: 515px;
    width: $dialog-width;

    .description {
        display: none;
    }

    legend div {
        display: inline-block;
        margin: 0 8px;
    }

    fieldset {
        $fieldset-width : $dialog-width - 4 * $dialog-padding - 2px;
        $hostname_width : 320px;
        $account_width : 210px;
        $input-spacing : 12px;
        $size_width : 75px;

        margin-bottom: $dialog-padding;

        label[name=name], input[name=name] {
            width: $fieldset-width;
            display: inline-block;
        }

        label[name=host], input[name=host],
        label[name=database], input[name=database] {
            width: $hostname-width;
        }

        label[name=port], input[name=port] {
            width: $fieldset-width - $hostname_width - $dialog-padding - 4px;
            margin-left: $input-spacing;
        }

        label[name=db_username], input[name=db_username],
        label[name=databaseName], input[name=databaseName],
        label[name=userName], input[name=userName],
        label[name=userGroups], input[name=userGroups]
        {
            width: $account-width;
        }

        .instance_size_container {
            display: inline-block;
            margin-left: 10px;
        }

        label[name=size] {
            width: $size_width;
        }

        input[name=size] {
            width: $size_width;
        }

        label[name=db_password], input[name=db_password],
        label[name=schemaName], input[name=schemaName],
        label[name=userGroups], input[name=userGroups]
        {
            width: $fieldset-width - $account_width - $dialog-padding - 4px;
            margin-left: $input-spacing;
        }

        img.help {
            display: inline-block;
            margin-top: -3px;
            vertical-align: middle;
        }

        .instructions {
            @include dialog-label;
            margin-top: 20px;
            display: inline-block;
        }

        .disabled {
            color : $color-text4;
        }

        .max_size {
            @include dialog-label;
        }

        select, .ui-selectmenu {
            width: 225px;
        }
    }
}

